@@ -1,3 +1,7 @@
+2006-05-10  Daniele Favara <danjele@gmail.com>
+
+	* legacy-icon-mapping.xml: Add some links for XFCE
+
 2006-04-21  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.7.2 for release
